# tts-studio

./: .env.example  .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: conftest.py  test_chunker.py  test_cleaner.py  test_factory.py  test_inputs.py  test_network.py  test_prosody.py  test_resolver.py  test_ssrf.py  test_writer.py  test_youtube.py
tests/fixtures/: generate.py
tts/: config.py  pipeline.py  runtime.py  textutils.py
tts/audio/: writer.py
tts/engines/: base.py  edge.py  factory.py  google.py  prosody.py
tts/inputs/: docx.py  pdf.py  resolver.py  safety.py  web.py  youtube.py
tts/processors/: chunker.py  cleaner.py
